<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/witness_message_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/theme_dark_grey"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_Review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
          android:id="@+id/media_cover"
          android:layout_width="@dimen/movie_image_small_width"
          android:layout_height="@dimen/movie_image_small_height"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/movie" />

        <ImageView
          android:id="@+id/like_button"
          android:layout_width="30dp"
          android:layout_height="33dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="20dp"
          android:src="@drawable/ic_like"
          app:layout_constraintEnd_toStartOf="@+id/dislike_button"
          app:layout_constraintTop_toBottomOf="@+id/media_cover" />

        <ImageView
          android:id="@+id/dislike_button"
          android:layout_width="30dp"
          android:layout_height="33dp"
          android:layout_marginEnd="16dp"
          android:src="@drawable/ic_dislike"
          app:layout_constraintBottom_toBottomOf="@+id/like_button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/like_button" />

        <TextView
          android:id="@+id/username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text="Mariem"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="@+id/explore_followButton"
          app:layout_constraintStart_toEndOf="@+id/profile_pic"
          app:layout_constraintTop_toTopOf="@+id/explore_followButton" />

        <TextView
          android:id="@+id/text_title"
          android:textStyle="bold"
          android:layout_width="240dp"
          android:layout_height="wrap_content"
          android:text="Octopussy"
          android:textSize="14sp"
          app:layout_constraintStart_toStartOf="@+id/text_rating"
          app:layout_constraintTop_toTopOf="parent" />
        <TextView
          android:id="@+id/text_rating"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginStart="16dp"
          android:text="Rating: "
          android:textSize="14sp"
          app:layout_constraintStart_toEndOf="@+id/media_cover"
          app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
          android:id="@+id/rating"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:text="10"
          android:textColor="@color/theme_main"
          android:textSize="16sp"
          app:layout_constraintBottom_toBottomOf="@+id/text_rating"
          app:layout_constraintStart_toEndOf="@+id/text_rating"
          app:layout_constraintTop_toTopOf="@+id/text_rating" />

        <TextView
          android:id="@+id/text_comment"
          android:layout_width="240dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginStart="16dp"
          android:text="Great movie for octopus fans !"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="@+id/media_cover"
          app:layout_constraintStart_toEndOf="@+id/media_cover"
          app:layout_constraintTop_toBottomOf="@+id/text_rating"
          app:layout_constraintVertical_bias="0.110000014" />

        <TextView
          android:id="@+id/like_count"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="0"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="@+id/like_button"
          app:layout_constraintStart_toStartOf="@+id/like_button"
          app:layout_constraintTop_toBottomOf="@+id/like_button" />

        <TextView
          android:id="@+id/dislike_count"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="@+id/dislike_button"
          app:layout_constraintStart_toStartOf="@+id/dislike_button"
          app:layout_constraintTop_toBottomOf="@+id/dislike_button" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/explore_followButton"
          style="?attr/borderlessButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/review_user_follow_button"
          android:textColor="@color/theme_main"
          app:layout_constraintBottom_toBottomOf="@+id/like_count"
          app:layout_constraintEnd_toStartOf="@+id/like_button"
          app:layout_constraintStart_toEndOf="@+id/username"
          app:layout_constraintTop_toTopOf="@+id/like_button" />

        <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/profile_pic"
          android:layout_width="39dp"
          android:layout_height="38dp"
          android:src="@drawable/profile_picture_default"
          app:civ_border_color="@color/white"
          app:civ_border_width="2dp"
          app:layout_constraintBottom_toBottomOf="@+id/username"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/username" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_Comment_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Review">

        <com.google.android.material.card.MaterialCardView
          android:id="@+id/comments_card"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="16dp"
          android:clickable="true"
          android:backgroundTint="@color/theme_dark_grey"
          app:cardCornerRadius="5dp"
          app:cardElevation="5dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:layout_editor_absoluteX="20dp">

          <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
              android:id="@+id/expand_arrow"
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:backgroundTint="@color/transparent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:srcCompat="@drawable/ic_arrow_expand"
              app:tint="?attr/colorOnSurface" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:text="@string/comments"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
      </androidx.constraintlayout.widget.ConstraintLayout>


      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Comment_Header"
        tools:layout_editor_absoluteX="16dp">

        <EditText
          android:id="@+id/comment_text_field"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:background="@drawable/rounded_border"
          android:hint="Enter comment"
          android:inputType="textImeMultiLine"
          android:textSize="14dp"
          android:maxLength="@integer/max_comment_length"
          android:textCursorDrawable="@drawable/cursor"
          app:layout_constraintTop_toBottomOf="@id/comment_list" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/comment_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:paddingBottom="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          android:textColor="?attr/colorOnSurface"
          app:layout_constraintTop_toTopOf="parent" />


      </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>


</layout>