<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/feed"
      android:title="Feed"
      android:icon="@drawable/ic_feed"/>
  <item
      android:id="@+id/explore"
      android:title="Explore"
      android:icon="@drawable/ic_explore"/>
  <item
    android:id="@+id/search"
    android:title="Search"
    android:icon="@drawable/ic_search"/>
  <item
      android:id="@+id/my_reviews"
      android:title="My"
      android:icon="@drawable/ic_my_reviews"/>
  <item
    android:id="@+id/profile"
    android:title="Profile"
    android:icon="@drawable/ic_profile"/>

</menu>