...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

  <FrameLayout
      android:id="@+id/main_container"
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
...
